add --enable-native-access=ALL-UNNAMED to supress warning with kafka 3.x client on consume()